@@ -101,6 +101,10 @@ int RReadConsole (char* prompt, unsigned char* buf, int buflen, int hist) {
 
 	REmbedInternal::this_pointer->handleStandardCallback (&args);
 // default implementation seems to return 1 on success, 0 on failure, contrary to some documentation. see unix/std-sys.c
+	if (!(args.int_c)) {
+		REmbedInternal::this_pointer->currentCommandWasCancelled ();
+		Rf_onintr ();
+	}
 	if (buf && args.int_c) return 1;
 	return 0;
 }
